Added license for bintray explicitly
.. as the sobula bintray-release plugin is not able to figure out LGPL

--- a/FlowDesignInScala/build.gradle
+++ b/FlowDesignInScala/build.gradle
@@ -17,6 +17,7 @@ contacts {
 
 bintray.user = "kuniss"
 bintray.pkg.version.mavenCentralSync.user = "kuniss"
+bintray.pkg.licenses = ["LGPL-3.0"]
 
 repositories.jcenter()
 
