--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Build
         uses: eskatos/gradle-command-action@v1
         with:
-           arguments: build
-           dependencies-cache-enabled: true
+          build-root-directory: FlowDesignInScala
+          arguments: build
+          dependencies-cache-enabled: true
       - name: Release on tag
         if: startsWith(github.ref, 'refs/tags/')
         uses: eskatos/gradle-command-action@v1
@@ -35,6 +36,7 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ORG_GRADLE_PROJECT_SONATYPEPASSWORD }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
         with: 
+          build-root-directory: FlowDesignInScala
           arguments: release "-PreleaseVersion=${{ steps.get_version.outputs.version }}"
           dependencies-cache-enabled: true
       - name: Store HTML test report
