--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         uses: eskatos/gradle-command-action@v1
         with:
-          build-root-directory: FlowDesignInScala
+          build-root-directory: "./FlowDesignInScala"
           arguments: build
           dependencies-cache-enabled: true
       - name: Release on tag
@@ -36,7 +36,7 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ORG_GRADLE_PROJECT_SONATYPEPASSWORD }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
         with: 
-          build-root-directory: FlowDesignInScala
+          build-root-directory: "./FlowDesignInScala"
           arguments: release "-PreleaseVersion=${{ steps.get_version.outputs.version }}"
           dependencies-cache-enabled: true
       - name: Store HTML test report
